# vcs

./: .all-contributorsrc  .gitignore  BMA_Case1.py  BMA_Case2.py  BMA_Case3.py  Best_Matching.py  CONTRIBUTING.md  DEPLOYMENT.md  Hello there.txt  MANIFEST.in  NASD.py  PROJECT_SUMMARY.md  README.md  SAS.py  SC.py  VCS.py  generate_animations.sh  pyproject.toml  requirements-demo.txt  tag_version.py
.github/assets/: .gitkeep
.github/workflows/: ci-cd.yml  contributors.yml  deploy-docs.yml  publish.yml  test.yml
animations/: LAS.py  README.md
docs/: index.html
docs/assets/css/: style.css
docs/assets/js/: script.js
docs/pages/: api.html  example.html  playground.html
docs/sphinx/: Makefile  requirements.txt
docs/sphinx/source/: api.rst  conf.py  getting_started.rst  index.rst
docs/sphinx/source/_static/: custom.css
docs/widgets/best-match/: index.html
docs/widgets/distance-nas/: index.html
docs/widgets/gas/: index.html
docs/widgets/introduction/: index.html
docs/widgets/las/: index.html
docs/widgets/lct-nas-d/: index.html
docs/widgets/lct-nas-l/: index.html
docs/widgets/line-nas/: index.html
docs/widgets/mapping-window/: index.html
docs/widgets/nas/: index.html
docs/widgets/vcs/: index.html
docs/widgets/window-regularizer/: index.html
src/vcs/: __init__.py  scorer.py
src/vcs/_matching/: _best_match.py
src/vcs/_metrics/_nas/_nas_components/_line_nas/_actual_line_length/: _actual_line_length.py
src/vcs/_visualize_vcs/_best_match/: visualizer.py
src/vcs/_visualize_vcs/_config/: visualizer.py
src/vcs/_visualize_vcs/_distance_nas/: visualizer.py
src/vcs/_visualize_vcs/_las/: visualizer.py
src/vcs/_visualize_vcs/_line_nas/: calculations_visualizer.py  visualizer.py
src/vcs/_visualize_vcs/_mapping_windows/: visualizer.py
src/vcs/_visualize_vcs/_metrics_summary/: visualizer.py
src/vcs/_visualize_vcs/_pdf_report/: pdf_report.py
src/vcs/_visualize_vcs/_similarity_matrix/: visualizer.py
src/vcs/_visualize_vcs/_text_chunks/: visualizer.py
src/vcs/_visualize_vcs/_window_regularizer/: visualizer.py
videos/: README.md
